--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,20 @@
             <artifactId>spring-webmvc</artifactId>
             <version>5.3.27</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.15.2</version>
+        </dependency>
+
+
     </dependencies>
 
     <properties>
